only run loadfiles once, allow tty console

--- a/uboot.env.in
+++ b/uboot.env.in
@@ -1,6 +1,6 @@
 baudrate=115200
 boot_fdt=try
-bootcmd=for mmcdev in ${mmcdevs}; do mmc dev ${mmcdev}; if mmc rescan; then if run loadfiles; then run snappy_boot; fi; fi; done; run netboot; 
+bootcmd=for mmcdev in ${mmcdevs}; do mmc dev ${mmcdev}; if mmc rescan; then run snappy_boot; fi; done; run netboot;
 bootdelay=3
 bootscript=echo Running bootscript from mmc ...; source
 console=ttymxc1
@@ -16,7 +16,7 @@ initrd_file=initrd.img
 ip_dyn=yes
 kernel_file=kernel.img
 loadaddr=0x12000000
-mmcargs=setenv bootargs console=${console},${baudrate} root=${mmcroot}
+mmcargs=setenv bootargs console=${console},${baudrate} console=tty0 root=${mmcroot}
 mmcboot=echo Booting from mmc ...; run mmcargs; if test ${boot_fdt} = yes || test ${boot_fdt} = try; then if run loadfdt; then bootm ${loadaddr} - ${fdt_addr}; else if test ${boot_fdt} = try; then bootm; else echo WARN: Cannot load the DT; fi; fi; else bootm; fi;
 mmcdevs=0 1
 mmcpart=1
