--- a/crossbuild-snapcraft.yaml
+++ b/crossbuild-snapcraft.yaml
@@ -31,3 +31,13 @@ parts:
       - bc
       - gcc-arm-linux-gnueabi
 
+slots:
+  i2c-0:
+    interface: i2c
+    path: /dev/i2c-0
+  i2c-1:
+    interface: i2c
+    path: /dev/i2c-1
+  i2c-2:
+    interface: i2c
+    path: /dev/i2c-2
