--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -26,3 +26,14 @@ parts:
       - libpython2.7-dev
       - build-essential
       - bc
+
+slots:
+  i2c-0:
+    interface: i2c
+    path: /dev/i2c-0
+  i2c-1:
+    interface: i2c
+    path: /dev/i2c-1
+  i2c-2:
+    interface: i2c
+    path: /dev/i2c-2
